k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-boot-demo
  labels:
    name: spring-boot-demo
