k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
  namespace: spring-boot-demo
  labels:
    app: spring-boot-app
spec:
  selector:
    app: spring-boot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
